--- a/unpacked/manifest.json
+++ b/unpacked/manifest.json
@@ -1,13 +1,13 @@
 {
-	"name": "Save All Resources",
-	"version": "0.1.4",
-	"description": "UP - Save all resources files with retaining folder structure.",
+	"name": "Extract Mapped Resources",
+	"version": "5.3.19",
+	"description": "Extract all resources mapped within js files with retaining folder structure.",
 	"icons": {
     "128": "icon.gif"
 	},
 	"browser_action": {
     "default_icon": "icon.gif",
-		"default_title": "UP",
+		"default_title": "Extracting...",
 		"default_popup": "popup.html"
   },
 	"background": {
